# benchmarks

./: .gitignore  .gitmodules  README.md  install.sh  run_benchmark.sh
bench/: .gitignore  bench_lighttpd.sh  bench_micro.sh  bench_nginx.sh  benchmark_install.sh  create_content.sh  plot_micro.py  plot_nginx.py  run_tcc.sh  zpoline.patch  zpoline_printf.patch
bench/conf/: .gitignore  config_jit.h  config_preserving_xstate.h  config_rw_zpoline.h  config_sud.h  lighttpd1.conf  lighttpd12.conf  nginx1.conf  nginx12.conf
bench/microbench/: .gitignore  CMakeLists.txt  bench.cpp  bench_config.h  bench_syscall.asm  config.h  mb_config_rax.h  mb_config_sud_enable.h  mb_config_syscall.h
